# ttf-explorer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  ttf-explorer.pro
.github/workflows/: main.yml  tagged-release.yml
core/: .gitignore  Cargo.toml  ttfcore.h
core/src/: ffi.rs  lib.rs  parser.rs
core/src/tables/: cbdt.rs  cblc.rs  cff.rs  cff2.rs  cmap.rs  gdef.rs  glyf.rs  head.rs  hhea.rs  hmtx.rs  hvar.rs  kern.rs  loca.rs  maxp.rs  mod.rs  mvar.rs  name.rs  os_2.rs  post.rs  sbix.rs  stat.rs  svg.rs  vmtx.rs  vorg.rs
src/: algo.h  app.h  ffi.rs  hexview.cpp  hexview.h  lib.rs  main.cpp  main.rs  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  parser.rs  range.h  tree.rs  treemodel.cpp  treemodel.h  truetype.cpp  truetype.h  ttfcorepp.cpp  ttfcorepp.h  ui.rs  utils.cpp  utils.h
src/tables/: aat-common.cpp  aat-common.h  ankr.cpp  avar.cpp  avar.rs  cbdt.cpp  cblc.cpp  cff.cpp  cff.h  cff.rs  cff2.cpp  cmap.cpp  cmap.rs  feat.cpp  fvar.cpp  fvar.rs  gdef.cpp  gdef.rs  glyf.cpp  glyf.rs  gvar.cpp  gvar.rs  head.cpp  hhea.cpp  hmtx.cpp  hvar.cpp  kern.cpp  loca.cpp  maxp.cpp  mvar.cpp  mvar.rs  name.cpp  name.h  name.rs  os2.cpp  post.cpp  post.rs  sbix.cpp  sbix.rs  stat.cpp  (+10 more)
ui/: app.h  hexview.cpp  hexview.h  mainwindow.cpp  mainwindow.h  treemodel.cpp  treemodel.h  ttfcore.h  ttfcorepp.cpp  ttfcorepp.h  ui.cpp  ui.h
