[package]
name = "ttf-explorer"
version = "0.1.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tinyvec = "0.3.3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"

#[profile.release]
#lto = "fat"
#codegen-units = 1
